--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
                   <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
                   <div class="resume-section-content">
                      <ul class="mb-0">
+                        <li>IT Professional with over 5+ years of experience specializing in IT
+department management. Can implement IT effective strategies .My
+greatest strength is business awarness, which enables me to permanently
+streamline infrastructure and application. Striving to leverage my IT
+management skills at your company</li>
                         <li>Sr. software Developer with 5+ years of experience in developing highly scalable software solutions.
                            working on All Phases of Software Development Life Cycle  from requirement gathering and analysis to  Designing   , Implementation the  code
                            , Testing  and deploying to server.
@@ -94,14 +99,13 @@
                                  <div class="resume-timeline-item-header mb-2">
                                     <div class="d-flex flex-column flex-md-row">
                                        <h3 class="resume-position-title font-weight-bold mb-1">Senior Software Developer</h3>
-                                       <div class="resume-company-name ml-auto">| Client: BTS | Payroll: <b>Pegasus InfoCorp</b> |</div>
+                                       <div class="resume-company-name ml-auto">| Client: <b>BTS</b> | Payroll: <b>Pegasus InfoCorp</b> |</div>
                                     </div>
                                     <!--//row-->
                                     <div class="resume-position-time">Aug-2019 - Present</div>
                                  </div>
                                  <!--//resume-timeline-item-header-->
                                  <div class="resume-timeline-item-desc">
-                                    <br>
                                     <div class="project">
                                        <h4 class="project-name  resume-timeline-item-desc-heading font-weight-bold "> Project: Momenta</h4>
                                        <h4 class="resume-timeline-item-desc-heading font-weight-bold">Description:</h4>
@@ -112,6 +116,10 @@
                                           <li> Admin panel with multiple language support</li>
                                           <li> Content hierarchy with unlimited depth and size</li>
                                           <li> Workflow management (assigns privileges and responsibilities based on roles such as authors, editors and admins)</li>
+                                             <li>Assessment Management System providing a communication and resource hub for all of the institution's outcomes assessment and continuous improvement initiatives </li>
+                                          </li>
+                                          <li>Organizational planning and reporting</li>
+                                          <li>Online assessment plan creation and review</li>
                                        </ul>
                                        </p>
                                        <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
@@ -125,30 +133,6 @@
                                           <li class="list-inline-item"><span class="badge badge-primary badge-pill">amazon s3 & EC2</span></li>
                                        </ul>
                                     </div>
-                                    <br>
-                                    <br>
-                                    <div class="project">
-                                       <h4 class="project-name  resume-timeline-item-desc-heading font-weight-bold "> Project : Momenta</h4>
-                                       <h4 class="resume-timeline-item-desc-heading font-weight-bold">Description:</h4>
-                                       <p class="project-description">
-                                       <ul>
-                                          <li>Assessment Management System providing a communication and resource hub for all of the institution's outcomes assessment and continuous improvement initiatives </li>
-                                          </li>
-                                          <li>Organizational planning and reporting</li>
-                                          <li>Online assessment plan creation and review</li>
-                                       </ul>
-                                       </p>
-                                       <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
-                                       <ul class="list-inline">
-                                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">Angular(v8)</span></li>
-                                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">HTML5/CSS3/SASS</span></li>
-                                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">Angular Material</span></li>
-                                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">node js (with Typescript) & microservices</span></li>
-                                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">mongodb</span></li>
-                                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">docker</span></li>
-                                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">amazon s3 & EC2</span></li>
-                                       </ul>
-                                    </div>
                                  </div>
                                  <!--//resume-timeline-item-desc-->
                               </article>
@@ -157,14 +141,13 @@
                                  <div class="resume-timeline-item-header mb-2">
                                     <div class="d-flex flex-column flex-md-row">
                                        <h3 class="resume-position-title font-weight-bold mb-1">Senior Software  Developer</h3>
-                                       <div class="resume-company-name ml-auto">PegasusOne (payroll Pegasus Infocorp)</div>
+                                       <div class="resume-company-name ml-auto">| Client: <b>PegasusOne</b> | Payroll: <b>Pegasus InfoCorp</b> |</div>
                                     </div>
                                     <!--//row-->
-                                    <div class="resume-position-time">Aug-2017 - Aug-2018</div>
+                                    <div class="resume-position-time">May-2017 - Aug-2018</div>
                                  </div>
                                  <!--//resume-timeline-item-header-->
                                  <div class="resume-timeline-item-desc">
-                                    <br>
                                     <div class="project">
                                        <h4 class="project-name  resume-timeline-item-desc-heading font-weight-bold "> Project: Rabbittapp</h4>
                                        <h4 class="resume-timeline-item-desc-heading font-weight-bold">Description:</h4>
@@ -361,8 +344,8 @@
                               <article class="resume-timeline-item position-relative pb-5">
                                  <div class="resume-timeline-item-header mb-2">
                                     <div class="d-flex flex-column flex-md-row">
-                                       <h3 class="resume-position-title font-weight-bold mb-1">.net Developer</h3>
-                                       <div class="resume-company-name ml-auto">Enderson It</div>
+                                       <h3 class="resume-position-title font-weight-bold mb-1">PHP Developer</h3>
+                                       <div class="resume-company-name ml-auto">Zynque Techologies Pvt Ltd.</div>
                                     </div>
                                     <!--//row-->
                                     <div class="resume-position-time">Aug-2012 - Sept-2013</div>
@@ -392,7 +375,7 @@
                                     <br>
                                     <br>
                                     <div class="project">
-                                       <h4 class="project-name  resume-timeline-item-desc-heading font-weight-bold "> Project : Employ Tracking System  </h4>
+                                       <h4 class="project-name  resume-timeline-item-desc-heading font-weight-bold "> Project : Travel Jenny (Core PHP)  </h4>
                                        <h4 class="resume-timeline-item-desc-heading font-weight-bold">Description:</h4>
                                        <p class="project-description">
                                        <ul>
@@ -415,67 +398,6 @@
                                  </div>
                                  <!--//resume-timeline-item-desc-->
                               </article>
-                              <!--//resume-timeline-item-->
-                              <article class="resume-timeline-item position-relative">
-                                 <div class="resume-timeline-item-header mb-2">
-                                    <div class="d-flex flex-column flex-md-row">
-                                       <h3 class="resume-position-title font-weight-bold mb-1">Academic Projects </h3>
-                                       <!-- <div class="resume-company-name ml-auto">Amazon</div> -->
-                                    </div>
-                                    <!--//row-->
-                                    <div class="resume-position-time">2011 - 2012</div>
-                                 </div>
-                                 <!--//resume-timeline-item-header-->
-                                 <div class="resume-timeline-item-desc">
-                                    <br>
-                                    <div class="project">
-                                       <h4 class="project-name  resume-timeline-item-desc-heading font-weight-bold "> Project : GPS Tracking Of Mobile Devices </h4>
-                                       <h4 class="resume-timeline-item-desc-heading font-weight-bold">Description:</h4>
-                                       <p class="project-description">
-                                       <ul>
-                                          <li>    In this Project Tracking and Navigating the mobile devices. </li>
-                                          <li>    Using Longitude & latitude to finding Position and Altitude to find the Motion of Mobile Device. </li>
-                                       </ul>
-                                       </p>
-                                       <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
-                                       <ul class="list-inline">
-                                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">C# &.net</span></li>
-                                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">Sql server</span></li>
-                                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">jQuery</span></li>
-                                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">HTML/CSS</span></li>
-                                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">AJAX</span></li>
-                                       </ul>
-                                    </div>
-                                    <!-- project-block end -->
-                                    <br>
-                                    <br>
-                                    <div class="project">
-                                       <h4 class="project-name  resume-timeline-item-desc-heading font-weight-bold "> Project : Intrusion Detection And Internet Services Failure Reporting System </h4>
-                                       <h4 class="resume-timeline-item-desc-heading font-weight-bold">Description:</h4>
-                                       <p class="project-description">
-                                       <ul>
-                                          <li>    In this Project Sniffing the Traffic and Analyzing the Network Traffic and Detect
-                                             Several Predefined Intrusion Attacks and Mapping.
-                                          </li>
-                                          <li>    Uses the Concept of packet Filtering and packet Analyzing and Pre Configure table that
-                                             inform before dropping the packet.
-                                          </li>
-                                       </ul>
-                                       </p>
-                                       <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
-                                       <ul class="list-inline">
-                                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">C# &.net</span></li>
-                                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">Sql server</span></li>
-                                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">jQuery</span></li>
-                                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">HTML/CSS</span></li>
-                                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">AJAX</span></li>
-                                       </ul>
-                                    </div>
-                                    <!-- project-block end -->
-                                 </div>
-                                 <!--//resume-timeline-item-desc-->
-                              </article>
-                              <!--//resume-timeline-item-->
                            </div>
                            <!--//resume-timeline-->
                         </div>
@@ -774,8 +696,8 @@
                         <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Interests</h2>
                         <div class="resume-section-content">
                            <ul class="list-unstyled">
-                              <li class="mb-1"> <b> > </b> Music</li>
-                              <li class="mb-1"> <b> > </b> Drawing</li>
+                              <li class="mb-1">  Music</li>
+                              <li class="mb-1">  Drawing</li>
                            </ul>
                         </div>
                      </section>
