--- a/index.html
+++ b/index.html
@@ -111,8 +111,17 @@ management skills at your company</li>
                                        <h4 class="resume-timeline-item-desc-heading font-weight-bold">Description:</h4>
                                        <p class="project-description">
                                        <ul>
-                                          <li> Hi</li>
+                                          <li> Create and manage digital content. </li>
+                                          <li> Plugin based large scale system </li>
+                                          <li> Admin panel with multiple language support</li>
+                                          <li> Content hierarchy with unlimited depth and size</li>
+                                          <li> Workflow management (assigns privileges and responsibilities based on roles such as authors, editors and admins)</li>
+                                             <li>Assessment Management System providing a communication and resource hub for all of the institution's outcomes assessment and continuous improvement initiatives </li>
+                                          </li>
+                                          <li>Organizational planning and reporting</li>
+                                          <li>Online assessment plan creation and review</li>
                                        </ul>
+                                       </p>
                                        </p>
                                     </div>
                                  </div>
