change for pegasus update

--- a/index.html
+++ b/index.html
@@ -143,7 +143,15 @@
                                                     <h4 class="resume-timeline-item-desc-heading font-weight-bold">Description:</h4>
                                                     <p class="project-description">
                                                     <ul>
-                                                        <li> Hi</li>
+                                                        <li>
+                                                         Product was build for New Era family of companies which has provides quality, affordable insurance and financial products highlighted by outstanding customer service.
+                                                      </li>
+                                                      <li>
+                                                         Majorly the product was divided in four section agents, carries, plans and customers.
+                                                      </li>
+                                                      <li>
+                                                         Handling various task like premium calculation, mandatory and condition questionary to check eligibility of the policy for customer and generating the policy pdf etc.
+                                                      </li>
                                                     </ul>
                                                     </p>
                                                 </div>
