--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <div class="resume-section-content">
                             <ul class="mb-0">
                                 <li>
-                                    Full-stack developer with nearly 6 years of experience in developing highly scalable software solutions. working on all phases of the software development life cycle from requirement gathering, designing,  development, testing, and maintaining & analysis.
+                                    Full-stack developer with nearly 6 years of experience in developing highly scalable software solutions. Working on all phases of the software development life cycle from requirement gathering, designing,  development, testing, and maintaining & analysis.
                                     </li><li>
 Seeking a position in information technology (IT) where I can maximize my experience, which will enable me to use my strong programming skills, experience in development acquired to further leverage my career, while applying passion to work with people across the world.
                                 </li>
@@ -106,6 +106,7 @@ Good experience in Agile software development, Design, Programming, Software as 
                                                         <li>Online assessment plan creation and review</li>
                                                     </ul>
                                                     </p>
+                                                    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
                                                     <ul class="list-inline">
                                                         <li class="list-inline-item"><span class="badge badge-primary badge-pill">NodeJS</span></li>
                                                         <li class="list-inline-item"><span class="badge badge-primary badge-pill">Angular 8</span></li>
