Content changes for resume

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Responsive Resume Template">
-        <meta name="author" content="Jhamman sharma ">
+        <meta name="description" content="Full-stack developer with nearly 6 years of experience in developing highly scalable software solutions. Working on all phases of the software development life cycle from requirement gathering, designing,  development, testing, and maintaining & analysis.">
+        <meta name="author" content="Akash Yellgetti">
         <link rel="shortcut icon" href="favicon.ico">
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
