--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <!--//primary-info-->
                             <div class="secondary-info ml-md-auto mt-2">
                                 <ul class="resume-social list-unstyled">
-                                    <li class="mb-3"><a href="https://www.linkedin.com/in/jhamman-sharma/" target="_blank"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>LinkedIn</a></li>
+                                    <li class="mb-3"><a href="https://www.linkedin.com/in/akash-yellgetti-a41b38a2" target="_blank"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>LinkedIn</a></li>
                                     <li class="mb-3"><a href="https://github.com/akash-yellgetti" target="_blank"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>GitHub</a></li>
                                 </ul>
                             </div>
