--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ Good experience in Agile software development, Design, Programming, Software as 
                                             <div class="resume-timeline-item-header mb-2">
                                                 <div class="d-flex flex-column flex-md-row">
                                                     <h3 class="resume-position-title font-weight-bold mb-1">Senior Software Developer</h3>
-                                                    <div class="resume-company-name ml-auto">| Client: <b>BTS</b> | Organisation: <b>Pegasus InfoCorp</b> |</div>
+                                                    <div class="resume-company-name ml-auto">| Organisation: <b>BTS</b> |</div>
                                                 </div>
                                                 <!--//row-->
-                                                <div class="resume-position-time">Aug-2019 - Present</div>
+                                                <div class="resume-position-time">Aug 2019 - Present</div>
                                             </div>
                                             <!--//resume-timeline-item-header-->
                                             <div class="resume-timeline-item-desc">
@@ -126,7 +126,7 @@ Good experience in Agile software development, Design, Programming, Software as 
                                                     <div class="resume-company-name ml-auto">| Client: <b>PegasusOne</b> | Organisation: <b>Pegasus InfoCorp</b> |</div>
                                                 </div>
                                                 <!--//row-->
-                                                <div class="resume-position-time">May-2017 - Aug-2018</div>
+                                                <div class="resume-position-time">May 2018 - Aug 2019</div>
                                             </div>
                                             <!--//resume-timeline-item-header-->
                                             <div class="resume-timeline-item-desc">
@@ -168,7 +168,7 @@ Good experience in Agile software development, Design, Programming, Software as 
                                                     <div class="resume-company-name ml-auto">| Organisation: <b>SoftPillar Technologies Pvt Ltd</b> |</div>
                                                 </div>
                                                 <!--//row-->
-                                                <div class="resume-position-time">May-2017 - Aug-2018</div>
+                                                <div class="resume-position-time">Oct 2017 - Jan 2018</div>
                                             </div>
                                             <!--//resume-timeline-item-header-->
                                             <div class="resume-timeline-item-desc">
@@ -236,7 +236,7 @@ Good experience in Agile software development, Design, Programming, Software as 
                                                     <div class="resume-company-name ml-auto">| Organisation: <b>FinPeace Techologies Pvt Ltd</b> |</div>
                                                 </div>
                                                 <!--//row-->
-                                                <div class="resume-position-time">Mar-2016- Oct-2017</div>
+                                                <div class="resume-position-time">Mar 2016 - Oct 2017</div>
                                             </div>
                                             <!--//resume-timeline-item-header-->
                                             <!--//resume-timeline-item-header-->
@@ -277,7 +277,7 @@ Good experience in Agile software development, Design, Programming, Software as 
                                                     <div class="resume-company-name ml-auto">| Organisation: <b>Pamac Finserve Pvt Ltd</b> |</div>
                                                 </div>
                                                 <!--//row-->
-                                                <div class="resume-position-time">Oct-2015 - Mar-2016</div>
+                                                <div class="resume-position-time">Oct 2015 - Mar 2016</div>
                                             </div>
                                             <!--//resume-timeline-item-header-->
                                             <div class="resume-timeline-item-desc">
@@ -334,7 +334,7 @@ Good experience in Agile software development, Design, Programming, Software as 
                                                     <div class="resume-company-name ml-auto">| Organisation: <b>Zynque Techologies Pvt Ltd.</b> |</div>
                                                 </div>
                                                 <!--//row-->
-                                                <div class="resume-position-time">Oct-2015 - Mar-2016</div>
+                                                <div class="resume-position-time">Sep 2014 - Oct 2015</div>
                                             </div>
                                             <!--//resume-timeline-item-header-->
                                             <div class="resume-timeline-item-desc">
